--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
 
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="emploi_du_temps">Emploi du temps</string>
+    <string name="notes">Notes</string>
+
 
 
 
