--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,11 @@
     <string name="password">Mot de passe</string>
     <string name="loginbtn">Connexion</string>
     <string name="forgotpassword">Mot de passe oublié ?</string>
+
+
+    <!--FRAGMENT SCHEDULE STRINGS-->
+    <string name="course_sample">Cours : type1 - nom2\nSalle : salle3\nEnseignant : enseignant4\n</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
