--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
 
 
     <!--FRAGMENT SCHEDULE STRINGS-->
-    <string name="course_sample">Cours : type1 - nom2\nSalle : salle3\nEnseignant : enseignant4\n</string>
+    <string name="course_sample">Cours : type1 - nom2\nSalle : salle3\nEnseignant : enseignant4</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
