--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,8 @@
     <string name="course_sample">Cours : type1 - nom2\nSalle : salle3\nEnseignant : enseignant4</string>
 
     <!-- HEADER DRAWER MENU -->
-    <string name="text_intro_sample">Nom1 \nPrenom2 \n\nClasse3</string>
+    <string name="text_intro_name">Nom1\nPrenom2</string>
+    <string name="text_intro_class">Classe3</string>
 
     <!-- MAIN DRAWER MENU -->
     <string name="nav_schedule">Emploi du temps</string>
