--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Digital Campus Mobile</string>
+    <string name="app_name">MyEsme</string>
     <string name="title_activity_login_page">LoginPageActivity</string>
     <string name="title_activity_note_page">NotePageActivity</string>
     <!-- Strings used for fragments for navigation -->
@@ -13,7 +13,6 @@
 
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
-
 
 
     <!--LOGIN PAGE STRINGS-->
