optimisations fiiiiiiin fini finto last but not not last

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,22 @@
     <string name="nav_schedule">Emploi du temps</string>
     <string name="nav_note">Notes</string>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <string name="knil">https://youtu.be/xAyMsSPgrfE?t=7</string>
+
 </resources>
